--- a/src/layouts/Header.module.css
+++ b/src/layouts/Header.module.css
@@ -8,7 +8,7 @@
 }
 
 .logoImg {
-    
+
     height: 40px;
     width: 240px;
     padding: 20px;
@@ -20,6 +20,7 @@
 
     color: white;
     font-family: var(--defulat-font);
+    font-size: 18px;
 
 }
 
@@ -27,6 +28,7 @@
 
     color: white;
     font-family: var(--defulat-font);
+    font-size: 18px;
 
 }
 
@@ -36,5 +38,6 @@
     flex-direction: row;
     gap: 20px;
     padding: 20px;
+    
 
 }
